Moves client files to CDN (#6051)
* chore(client-libs): moves client libs to cdn

* chore(google-classroom): one set of google classroom scopes which is consistent with V1

* chore(client-libs): moves client libs to cdn and related path changes

* chore(unused) : remove unused files

* chore(default-img): remove default images from shutterstock

* chore(client-cdn): uses Edulastic cdn for desmos (hosted one doesn't require key), geogebra, ravenjs, segmentjs (analytics.js hosted one doesn't require key ), doc based test picking file from google drive uses env variable, default transparent image (cloze image drop down)

* chore(client-cdn): env based sentry config, moved sentry config, segment analytics  from to public/index.html to src/client/index.js

--- a/public/index.html
+++ b/public/index.html
@@ -17,62 +17,9 @@
   <body id="body">
     <section id="react-app"></section>
     <section id="modal-root"></section>
-    <script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
-    <script>
-      Raven.config("http://8a02eaf36de84240a77c0dd7aaa6bdfe@ec2-107-22-35-151.compute-1.amazonaws.com/2", {
-        whitelistUrls: [/edulastic-poc\.snapwiz\.net/]
-      }).install();
-    </script>
-    <script type="text/javascript">
-      !(function() {
-        var analytics = (window.analytics = window.analytics || []);
-        if (!analytics.initialize)
-          if (analytics.invoked) window.console && console.error && console.error("Segment snippet included twice.");
-          else {
-            analytics.invoked = !0;
-            analytics.methods = [
-              "trackSubmit",
-              "trackClick",
-              "trackLink",
-              "trackForm",
-              "pageview",
-              "identify",
-              "reset",
-              "group",
-              "track",
-              "ready",
-              "alias",
-              "debug",
-              "page",
-              "once",
-              "off",
-              "on"
-            ];
-            analytics.factory = function(t) {
-              return function() {
-                var e = Array.prototype.slice.call(arguments);
-                e.unshift(t);
-                analytics.push(e);
-                return analytics;
-              };
-            };
-            for (var t = 0; t < analytics.methods.length; t++) {
-              var e = analytics.methods[t];
-              analytics[e] = analytics.factory(e);
-            }
-            analytics.load = function(t, e) {
-              var n = document.createElement("script");
-              n.type = "text/javascript";
-              n.async = !0;
-              n.src = "https://cdn.segment.com/analytics.js/v1/" + t + "/analytics.min.js";
-              var a = document.getElementsByTagName("script")[0];
-              a.parentNode.insertBefore(n, a);
-              analytics._loadOptions = e;
-            };
-            analytics.SNIPPET_VERSION = "4.1.0";
-            analytics.load("yd56yvjG5lOGS48q0KUawqr9ZpDY5rYR");
-          }
-      })();
-    </script>
+    <script
+      src="https://cdn2.edulastic.com/JS/thirdpartylib/ravenjs/3.27.0/raven.min.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
